--- a/index.css
+++ b/index.css
@@ -1,118 +1,174 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-:root{
-    --cyan-primary: hsl(158, 36%, 37%);
-    --cyan-secondary: hsl(158, 36%, 29%);
-    --cream-primary: hsl(30, 38%, 92%);
+:root {
+  --cyan-primary: hsl(158, 36%, 37%);
+  --cyan-secondary: hsl(158, 36%, 29%);
+  --cream-primary: hsl(30, 38%, 92%);
 
-    --blue: hsl(212, 21%, 14%);
-    --grey-blue: hsl(228, 12%, 48%);
-    --white: hsl(0, 0%, 100%);
+  --blue: hsl(212, 21%, 14%);
+  --grey-blue: hsl(228, 12%, 48%);
+  --white: hsl(0, 0%, 100%);
 
-    --size: 14px;
+  --size: 14px;
 
-    --primary-font: "Montserrat", sans-serif;
-    --secondary-font: "Fraunces", serif;;
-
+  --primary-font: "Montserrat", sans-serif;
+  --secondary-font: "Fraunces", serif;
 }
 
-.product-preview-wrapper{
-    width: 100%;
-    height: 100vh;
-    background: var(--cream-primary);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.product-preview-wrapper {
+  width: 100%;
+  height: 100vh;
+  background: var(--cream-primary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.product-preview-container{
-    width: 600px;
-    height: 460px;
-    border-radius: .5rem;
-    overflow: hidden;
-    display: flex;
-    background: var(--white);
+.product-preview-container {
+  width: 600px;
+  height: 460px;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  display: flex;
+  background: var(--white);
 }
 
-.product-preview-image{
-    flex-basis: 50%;
+.product-preview-image {
+  flex-basis: 50%;
+  background-image: url("/images/image-product-desktop.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-.product-preview-image img{
-    width: 100%;
-    height: 100%;
+.product-preview-image img {
+  width: 100%;
+  height: 100%;
 }
 
-.product-preview-details{
-    flex-basis: 50%;
-    padding: 2rem;
+.product-preview-details {
+  flex-basis: 50%;
+  padding: 2rem;
 }
 
-.product-preview-details .product{
-    color: var(--grey-blue);
-    font-size: var(--size);
-    text-transform: uppercase;
-    letter-spacing: .4rem;
-    margin-bottom: 1rem;
+.product-preview-details .product {
+  color: var(--grey-blue);
+  font-size: var(--size);
+  text-transform: uppercase;
+  letter-spacing: 0.4rem;
+  margin-bottom: 1rem;
 }
 
-.product-preview-details .product-name{
-    font-family: var(--secondary-font);
-    font-size: 1.8rem;
-    padding-right: 1rem;
-    margin-bottom: 2rem;
+.product-preview-details .product-name {
+  font-family: var(--secondary-font);
+  font-size: 1.8rem;
+  padding-right: 1rem;
+  margin-bottom: 2rem;
 }
 
-.product-details{
-    color: var(--grey-blue);
-    font-size: var(--size);
-    margin-bottom: 2rem;
+.product-details {
+  color: var(--grey-blue);
+  font-size: var(--size);
+  margin-bottom: 2rem;
 }
 
-.pricing{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
-    margin-bottom: 2rem;
+.pricing {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  margin-bottom: 2rem;
 }
 
-.pricing h2{
-    color: var(--cyan-primary);
-    font-size: 2rem;
-    font-family: var(--secondary-font);
+.pricing h2 {
+  color: var(--cyan-primary);
+  font-size: 2rem;
+  font-family: var(--secondary-font);
 }
 
-.pricing p{
-    color: var(--grey-blue);
-    text-decoration: line-through;
+.pricing p {
+  color: var(--grey-blue);
+  text-decoration: line-through;
 }
 
-button{
-    width: 100%;
-    background: var(--cyan-primary);
-    border: none;
-    outline: none;
+button {
+  width: 100%;
+  background: var(--cyan-primary);
+  border: none;
+  outline: none;
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem 0;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button:hover {
+  background: var(--cyan-secondary);
+}
+
+.attribution{
+    background: black;
     color: var(--white);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+    text-align: center;
     padding: 1rem 0;
-    border-radius: .5rem;
-    cursor: pointer;
-    font-weight: bold;
 }
 
-button:hover{
-    background: var(--cyan-secondary);
+.attribution a{
+    text-decoration: none;
+}
+
+@media only screen and (max-width: 375px) {
+  .product-preview-wrapper {
+    padding: 1rem;
+  }
+
+  .product-preview-container {
+    height: 95%;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .product-preview-image {
+    height: 38%;
+    width: 100%;
+    background-image: url("/images/image-product-mobile.jpg");
+  }
+
+  .product-preview-image img {
+    height: 100%;
+  }
+
+  .product-preview-details {
+    padding: 1rem 2rem;
+  }
+
+  .product-preview-details .product {
+    margin-bottom: 0.7rem;
+  }
+
+  .product-preview-details .product-name {
+    margin-bottom: 1rem;
+    padding-right: 0;
+  }
+
+  .product-details {
+    margin-bottom: 1rem;
+  }
+}
+
+.pricing {
+  margin-bottom: 1.5rem;
 }
